--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,11 @@
     { "source": "/contact-us", "destination": "/contact.html" },
     { "source": "/about-pilates-finder", "destination": "/about.html" },
     { "source": "/:state([a-z0-9-]+)", "destination": "/cities.html" },
-    { "source": "/:state([a-z0-9-]+)/:city([a-z0-9-]+)", "destination": "/city.html" },
-    { "source": "/(.*)", "status": 404, "destination": "/404.html" }
+    { "source": "/:state([a-z0-9-]+)/:city([a-z0-9-]+)", "destination": "/city.html" }
+  ],
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/404.html", "status": 404 }
   ],
   "cleanUrls": true,
   "trailingSlash": false
