--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,11 @@
     { "source": "/:state([a-z0-9-]+)", "destination": "/cities.html" },
     { "source": "/:state([a-z0-9-]+)/:city([a-z0-9-]+)", "destination": "/city.html" },
     { "source": "/city", "destination": "/city.html" }
-  ]
-  
+  ],
   "cleanUrls": true,
-  "trailingSlash": false
+  "trailingSlash": false,
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/404.html", "status": 404 }
+  ]
 }
