--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,39 @@
 {
-  "rewrites": [
-    { "source": "/states", "destination": "/states.html" },
-    { "source": "/contact-us", "destination": "/contact.html" },
-    { "source": "/about-pilates-finder", "destination": "/about.html" },
-    { "source": "/:state([a-z0-9-]+)", "destination": "/cities.html" },
-    { "source": "/:state([a-z0-9-]+)/:city([a-z0-9-]+)", "destination": "/city.html" },
-    { "source": "/city", "destination": "/city.html" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/node"
+    }
   ],
-  "cleanUrls": true,
-  "trailingSlash": false,
   "routes": [
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/404.html", "status": 404 }
+    {
+      "src": "/states",
+      "dest": "/states.html"
+    },
+    {
+      "src": "/[state]",
+      "dest": "/[state]/cities.html"
+    },
+    {
+      "src": "/[state]/[city]",
+      "dest": "/city.html"
+    },
+    {
+      "src": "/[state]/[city]/[studio]",
+      "dest": "/studio.html"
+    },
+    {
+      "src": "/about-pilates-finder",
+      "dest": "/about.html"
+    },
+    {
+      "src": "/contact-us",
+      "dest": "/contact.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
