--- a/vercel.json
+++ b/vercel.json
@@ -7,13 +7,13 @@
     }
   ],
   "routes": [
-    { "src": "/", "dest": "/index.html" }, // Explicitly handle root
+    { "src": "/", "dest": "/index.html" },
     { "src": "/states", "dest": "/states.html" },
     { "src": "/about-pilates-finder", "dest": "/about.html" },
     { "src": "/contact-us", "dest": "/contact.html" },
     { "src": "/[state]", "dest": "/[state]/cities.html" },
     { "src": "/[state]/[city]", "dest": "/city.html" },
     { "src": "/[state]/[city]/[studio]", "dest": "/studio.html" },
-    { "src": "/(.*)", "dest": "/index.html" } // Catch-all as fallback
+    { "src": "/(.*)", "dest": "/index.html" } 
   ]
 }
