--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,20 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "dist/**",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      { "src": "/", "dest": "/dist/index.html" },
-      { "src": "/states", "dest": "/dist/states.html" },
-      { "src": "/about-pilates-finder", "dest": "/dist/about.html" },
-      { "src": "/contact-us", "dest": "/dist/contact.html" },
-      { "src": "/([a-zA-Z0-9-]+)", "dest": "/dist/[state]/cities.html" },
-      { "src": "/([a-zA-Z0-9-]+)/([a-zA-Z0-9-]+)", "dest": "/dist/city.html" },
-      { "src": "/([a-zA-Z0-9-]+)/([a-zA-Z0-9-]+)/([a-zA-Z0-9-]+)", "dest": "/dist/studio.html" },
-      { "src": "/(.*)", "dest": "/dist/index.html" }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "dist/**",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    { "src": "/assets/(.*)", "dest": "/dist/assets/$1" }, // Serve assets
+    { "src": "/", "dest": "/dist/index.html" },
+    { "src": "/states", "dest": "/dist/states.html" },
+    { "src": "/about-pilates-finder", "dest": "/dist/about.html" },
+    { "src": "/contact-us", "dest": "/dist/contact.html" },
+    { "src": "/([a-zA-Z0-9-]+)", "dest": "/dist/[state]/cities.html" },
+    { "src": "/([a-zA-Z0-9-]+)/([a-zA-Z0-9-]+)", "dest": "/dist/city.html" },
+    { "src": "/([a-zA-Z0-9-]+)/([a-zA-Z0-9-]+)/([a-zA-Z0-9-]+)", "dest": "/dist/studio.html" },
+    { "src": "/(.*)", "dest": "/dist/index.html" }
+  ]
+}
