--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     }
   ],
   "routes": [
-    { "src": "/assets/(.*)", "dest": "/dist/assets/$1" }, // Serve assets
+    { "src": "/assets/(.*)", "dest": "/dist/assets/$1" },
     { "src": "/", "dest": "/dist/index.html" },
     { "src": "/states", "dest": "/dist/states.html" },
     { "src": "/about-pilates-finder", "dest": "/dist/about.html" },
