fix cities.html by updating vercel

--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,8 @@
     { "source": "/states", "destination": "/states.html" },
     { "source": "/contact-us", "destination": "/contact.html" },
     { "source": "/about-pilates-finder", "destination": "/about.html" },
-    { "source": "/:state([a-z0-9-]+)", "destination": "/cities.html" },
-    { "source": "/:state([a-z0-9-]+)/:city([a-z0-9-]+)", "destination": "/city.html" }
+    { "source": "/:state([a-zA-z0-9-]+)", "destination": "/cities.html" },
+    { "source": "/:state([a-zA-z0-9-]+)/:city([a-zA-z0-9-]+)", "destination": "/city.html" }
   ],
   "cleanUrls": true,
   "trailingSlash": false
