--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,22 @@
 {
-  "rewrites": [
-    { "source": "/states", "destination": "/states.html" },
-    { "source": "/contact-us", "destination": "/contact.html" },
-    { "source": "/about-pilates-finder", "destination": "/about.html" },
-    { "source": "/:state([a-zA-z0-9-]+)", "destination": "/cities.html" },
-    { "source": "/:state([a-zA-z0-9-]+)/:city([a-zA-z0-9-]+)", "destination": "/city.html" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "dist/**",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/states", "dest": "/dist/states.html" },
+    { "src": "/contact-us", "dest": "/dist/contact.html" },
+    { "src": "/about-pilates-finder", "dest": "/dist/about.html" },
+    { "src": "/([a-zA-Z0-9-]+)", "dest": "/dist/cities.html" },
+    { "src": "/([a-zA-Z0-9-]+)/([a-zA-Z0-9-]+)", "dest": "/dist/city.html" },
+    { "src": "/([a-zA-Z0-9-]+)/([a-zA-Z0-9-]+)/([a-zA-Z0-9-]+)", "dest": "/dist/studio.html" },
+    { "src": "/assets/(.*)", "dest": "/dist/assets/$1" },
+    { "src": "/(.*)", "dest": "/dist/index.html", "status": 200 },
+    { "src": "/.*", "dest": "/dist/404.html", "status": 404 }
   ],
   "cleanUrls": true,
   "trailingSlash": false
