fix cities.html by updating vercel v4

--- a/vercel.json
+++ b/vercel.json
@@ -11,11 +11,11 @@
     { "src": "/states", "dest": "/dist/states.html" },
     { "src": "/contact-us", "dest": "/dist/contact.html" },
     { "src": "/about-pilates-finder", "dest": "/dist/about.html" },
-    { "src": "^/([^/]+/[^/]+/[^/]+)$", "dest": "/dist/studio.html" },
-    { "src": "^/([^/]+/[^/]+)$", "dest": "/dist/city.html" },
-    { "src": "^/([^/]+)$", "dest": "/dist/cities.html" },
+    { "src": "^/([^/]+)/([^/]+)/([^/]+)$", "dest": "/dist/studio.html?state=$1&city=$2&studio=$3" },
+    { "src": "^/([^/]+)/([^/]+)$", "dest": "/dist/city.html?state=$1&city=$2" },
+    { "src": "^/([^/]+)$", "dest": "/dist/cities.html?state=$1" },
     { "src": "/assets/(.*)", "dest": "/dist/assets/$1" },
-    { "src": "/(.*)", "dest": "/dist/index.html", "status": 200 },
+    { "src": "/(.*)", "dest": "/dist/index.html" },
     { "src": "/.*", "dest": "/dist/404.html", "status": 404 }
   ],
   "cleanUrls": true,
