--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,16 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "dist/**",
-      "use": "@vercel/static"
-    }
+    { "src": "*.html", "use": "@vercel/static" },
+    { "src": "*.js", "use": "@vercel/node" }
   ],
   "routes": [
     { "handle": "filesystem" },
-    { "src": "/contact-us", "dest": "/dist/contact.html" },
-    { "src": "/about-pilates-finder", "dest": "/dist/about.html" },
-    { "src": "/states", "dest": "/dist/states.html" },
-    { "src": "^/([^/]+)/([^/]+)$", "dest": "/dist/city.html?state=$1&city=$2" },
-    { "src": "^/([^/]+)$", "dest": "/dist/cities.html?state=$1" },
-    { "src": "/assets/(.*)", "dest": "/dist/assets/$1" },
-    { "src": "/(.*)\\.js", "dest": "/dist/$1.js" },
-    { "src": "/(.*)\\.css", "dest": "/dist/$1.css" },
-    { "src": "/(.*)", "dest": "/dist/index.html" },
-    { "src": "/.*", "dest": "/dist/404.html", "status": 404 }
+    { "src": "/states", "dest": "/states.html" },
+    { "src": "/contact-us", "dest": "/contact.html" },
+    { "src": "/about-pilates-finder", "dest": "/about.html" },
+
+    { "src": "/(.*)", "status": 404, "dest": "/404.html" }
   ],
   "cleanUrls": true,
   "trailingSlash": false
